# Deep-Fake-

./: HUONG_DAN.md  README.md  monitor_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: QUICKSTART.md  SCREENSHOTS.md
locales/: vi.json
modules/: capturer.py  core.py  gettext.py  globals.py  gpu_processing.py  metadata.py  onnx_optimize.py  platform_info.py  ui.py  utilities.py  video_capture.py
modules/processors/frame/: _onnx_enhancer.py  core.py  face_enhancer.py  face_enhancer_gpen256.py  face_enhancer_gpen512.py  face_swapper.py
scripts/: build_release.ps1  capture_demo.ps1
tests/: test_face_analyser_get_one_face.py  test_gettext_language_manager.py  test_platform_info.py
